# cranelift

docs/: callex.clif  example.clif  heapex-dyn.clif  heapex-sm32.clif  heapex-sm64.clif  regalloc.rst  testing.rst
filetests/cfg/: loop.clif  traps_early.clif  unused_node.clif
filetests/dce/: basic.clif
filetests/domtree/: basic.clif  loops.clif  loops2.clif  tall-tree.clif  wide-tree.clif
filetests/legalizer/: bitrev.clif  br_table_cond.clif
filetests/licm/: basic.clif  complex.clif  critical-edge.clif  encoding.clif  multiple-blocks.clif  nested_loops.clif  reject.clif
filetests/parser/: alias.clif  branch.clif  call.clif  flags.clif  instruction_encoding.clif  keywords.clif  memory.clif  rewrite.clif  ternary.clif  tiny.clif
filetests/postopt/: basic.clif  complex_memory_ops.clif  fold_offset_into_address.clif
filetests/preopt/: branch.clif  numerical.clif
filetests/regalloc/: aliases.clif  basic.clif  coalesce.clif  coalescing-207.clif  coalescing-216.clif  coloring-227.clif  constraints.clif  fallthrough-return.clif  ghost-param.clif  global-constraints.clif  global-fixed.clif  gpr-deref-safe-335.clif  infinite-interference.clif  iterate.clif  multi-constraints.clif  multiple-returns.clif  output-interference.clif  reload-208.clif  reload.clif  schedule-moves.clif  spill-noregs.clif  spill.clif  unreachable_code.clif  x86-regres.clif
filetests/simple_gvn/: basic.clif  readonly.clif  reject.clif  scopes.clif
filetests/simple_preopt/: simplify.clif  (+5 more)
lib/entity/: Cargo.toml
lib/entity/src/: boxed_slice.rs  lib.rs  par_iter.rs  primary.rs
(+122 files in other folders)
