[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-entity"
version = "0.26.0"
description = "Data structures using entity references as mapping keys"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
repository = "https://github.com/CraneStation/cranelift"
categories = ["no-std"]
readme = "README.md"
keywords = ["entity", "set", "map"]
edition = "2018"

[dependencies]
rayon = { version = "1.0.3", optional = true }

[features]
default = ["std"]
std = []
rayon_traits = ["rayon"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
